# marketforge-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  pyproject.toml  railway.toml  requirements.txt  worker.py
api/: main.py  security.py
scripts/: bootstrap.py  init_schemas.sql  run_pipeline.py  smoke_test.py
src/marketforge/: __init__.py
src/marketforge/agents/: base.py
src/marketforge/agents/content_studio/: lead_agent.py
src/marketforge/agents/data_collection/: additional_agents.py  adzuna_agent.py  dedup_agent.py  funding_news_agent.py  lead_agent.py  recruiter_agent.py  reed_agent.py  specialist_boards_agent.py
src/marketforge/agents/graphs/: __init__.py  content_studio.py  data_collection.py  market_analysis.py  master.py  ml_engineering.py  ops_monitor.py  qa_testing.py  research.py  security.py  states.py  user_insights.py
src/marketforge/agents/market_analysis/: lead_agent.py
src/marketforge/agents/ml_engineering/: feature_agent.py  lead_agent.py  registry_agent.py
src/marketforge/agents/ops_monitor/: lead_agent.py
src/marketforge/agents/qa_testing/: lead_agent.py
src/marketforge/agents/research/: lead_agent.py
src/marketforge/agents/security/: guardrails.py  lead_agent.py
src/marketforge/agents/user_insights/: lead_agent.py
src/marketforge/config/: settings.py
src/marketforge/connectors/: base.py
src/marketforge/cv/: __init__.py  ats_scorer.py  gap_analyser.py  gdpr.py  parser.py  scanner.py
src/marketforge/memory/: postgres.py  redis_cache.py
src/marketforge/ml/: prescreen.py
src/marketforge/models/: job.py  state.py
src/marketforge/nlp/: taxonomy.py
src/marketforge/utils/: cost_tracker.py  logger.py
tests/: test_api.py
tests/load/: locustfile.py
tests/test_cv/: test_ats_scorer.py  test_cv_api.py  test_cv_parser.py  test_cv_security.py  test_gdpr.py  test_gdpr_audit.py
