[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marketforge"]

[project]
name = "marketforge-backend"
version = "1.0.0"
description = "MarketForge AI — Production Backend (FastAPI + APScheduler worker)"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Viraj Bulugahapitiya", email = "amanthavirajavb@gmail.com" }]
