[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marketforge"]

[project]
name = "marketforge-ai"
version = "0.1.0"
description = "UK AI Job Market Intelligence Platform — autonomous multi-department agentic system"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Viraj Bulugahapitiya", email = "amanthavirajavb@gmail.com" }]

dependencies = [
    # ── Agent Orchestration ──────────────────────────────────────────────────
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langsmith>=0.1.0",

    # ── LLM & Embeddings ────────────────────────────────────────────────────
    "google-generativeai>=0.8.0",
    "sentence-transformers>=3.0.0",

    # ── NLP ─────────────────────────────────────────────────────────────────
    "spacy>=3.7.0",
    "flashtext>=2.7",
    "rank-bm25>=0.2.2",

    # ── ML ──────────────────────────────────────────────────────────────────
    "scikit-learn>=1.4.0",
    "lightgbm>=4.3.0",
    "optuna>=3.6.0",
    "mlflow>=2.12.0",

    # ── Web / Scraping ───────────────────────────────────────────────────────
    "tavily-python>=0.5.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "lxml>=5.2.0",

    # ── Data ────────────────────────────────────────────────────────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "polars>=0.20.0",

    # ── Persistence ──────────────────────────────────────────────────────────
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "chromadb>=0.5.0",
    "redis>=5.0.0",

    # ── Task Queue / Scheduling ───────────────────────────────────────────────
    "celery[redis]>=5.3.0",
    "apscheduler>=3.10.0",

    # ── CV Analysis ───────────────────────────────────────────────────────────
    "pdfplumber>=0.11.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "python-magic>=0.4.27",
    "textstat>=0.7.0",
    "clamd>=1.0.2",

    # ── API ──────────────────────────────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # ── Dashboard ────────────────────────────────────────────────────────────
    "streamlit>=1.35.0",
    "plotly>=5.22.0",

    # ── Security ─────────────────────────────────────────────────────────────
    "transformers>=4.41.0",
    "torch>=2.3.0",

    # ── Observability ─────────────────────────────────────────────────────────
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",

    # ── Utilities ────────────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "tiktoken>=0.7.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.102.0",
    "respx>=0.21.0",           # httpx mocking
    "freezegun>=1.5.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
marketforge = "scripts.run_pipeline:main"

[tool.ruff]
target-version = "py311"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/marketforge --cov-report=term-missing --cov-fail-under=55"

[tool.coverage.run]
source = ["src/marketforge"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    # Agent files require live LLM keys — excluded from automated coverage
    "*/agents/content_studio/*",
    "*/agents/data_collection/lead_agent.py",
    "*/agents/data_collection/additional_agents.py",
    "*/agents/data_collection/funding_news_agent.py",
    "*/agents/data_collection/recruiter_agent.py",
    "*/agents/data_collection/specialist_boards_agent.py",
    "*/agents/market_analysis/*",
    "*/agents/ml_engineering/*",
    "*/agents/ops_monitor/*",
    "*/agents/qa_testing/*",
    "*/agents/research/*",
    "*/agents/security/lead_agent.py",
    "*/agents/user_insights/*",
    "*/ml/prescreen.py",
    "*/models/state.py",
]
