[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[project]
name = "marketforge-backend"
version = "0.1.0"
description = "MarketForge AI — FastAPI backend service"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Viraj Bulugahapitiya", email = "amanthavirajavb@gmail.com" }]

dependencies = [
    # ── Core package (all agents, graphs, ML, NLP — installed from git) ───────
    "marketforge-ai @ git+https://github.com/Viraj97-SL/marketforge-ai.git@feature/langgraph-refactor",

    # ── API layer ─────────────────────────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # ── Dashboard ─────────────────────────────────────────────────────────────
    "streamlit>=1.35.0",
    "plotly>=5.22.0",

    # ── Scheduling (APScheduler replaces Airflow for Railway) ─────────────────
    "apscheduler>=3.10.0",

    # ── Observability ─────────────────────────────────────────────────────────
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",

    # ── Utilities ─────────────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",       # for TestClient
    "respx>=0.21.0",       # httpx mocking
    "freezegun>=1.5.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
marketforge-worker = "worker:main"

[tool.ruff]
target-version = "py311"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=api --cov-report=term-missing"
